# micro-vscode

./: .gitignore  .lintstagedrc  .prettierrc.cjs  .stylelintrc.cjs  LICENSE  README.md  UPDATE_LOG.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: App.vue  main.ts  styles.css  styles.less
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: file.rs  git.rs  lib.rs  main.rs  path.rs  project.rs  utils.rs
src/components/: Action.vue  Editor.vue  FileTabs.vue  GitUser.vue  Greet.vue  Icon.vue  Menu.vue  Tools.vue
src/components/icons/: code.vue  css.vue  file.vue  folder.vue  git.vue  js.vue  json.vue  less.vue  md.vue  rust.vue  sass.vue  ts.vue  vue.vue
src/constants/: enums.ts
src/hooks/: useFile.ts  useFileIcon.ts  useMenu.ts
src/layouts/: index.vue
src/layouts/content/: LayoutContent.vue
src/layouts/header/: HeaderMenu.vue  HeaderTool.vue
src/layouts/toolbar/: FileMenuTool.vue  FileTool.vue  GitTool.vue  LayoutToolbar.vue  SearchTool.vue  Toolbar.vue
src/layouts/toolbar/git/: GitTool.vue
src/layouts/toolbar/git/components/: GitChangeFiles.vue  GitCommitLogs.vue
src/lib/handle/: file.ts  icon.ts
src/lib/utils/: api.ts
src/monaco/: setup.ts  shiki.ts  types.ts  utils.ts
src/pages/: Footer.vue  Main.vue
src/pages/content/: Content.vue
src/pages/header/: Header.vue  HeaderMenu.vue  HeaderTool.vue  LayoutControl.vue
src/pages/toolbar/: FileMenuTool.vue  SearchTool.vue  Toolbar.vue
src/pages/toolbar/git-tool/: GitTool.vue
src/pages/toolbar/git-tool/components/: GitChangeFiles.vue  GitCommitLogs.vue
src/stores/: git.ts  project.ts
src/types/: index.ts
src/utils/: api.ts  iconHandle.ts  projectHandle.ts
